plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id "io.swagger.core.v3.swagger-gradle-plugin" version "2.2.25"
	id 'com.diffplug.spotless' version '6.15.0'
}

group = 'com.shopping'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

spotless {
	java {
		googleJavaFormat('1.10.0') // 使用适合的 Google Java Format 版本
	}
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Flyway DB migration
	implementation 'org.flywaydb:flyway-core:9.22.0'

	// Hibernate 6.x (Jakarta EE compatible)
	implementation 'org.hibernate:hibernate-core:6.1.6.Final'

	// PostgreSQL Driver
	implementation 'org.postgresql:postgresql'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Security and JWT
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'

	// Swagger 3 (SpringDoc)
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'

	// JSON processing
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.16.1'
	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.16.1'

	// Apache Commons
	implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'

	// Lombok
	implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
	testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
}


tasks.named('test') {
	useJUnitPlatform()
}
tasks.build {
	dependsOn 'spotlessApply'
}